src/test/ui/issue-12511.stderr
error[E0391]: cycle detected when computing the supertraits of `t1`
  --> $DIR/issue-12511.rs:11:1
   |
LL | trait t1 : t2 {
   | ^^^^^^^^^^^^^
   |
note: ...which requires computing the supertraits of `t2`...
  --> $DIR/issue-12511.rs:15:1
   |
LL | trait t2 : t1 {
   | ^^^^^^^^^^^^^
   = note: ...which again requires computing the supertraits of `t1`, completing the cycle

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
